--- a/proyectoUberWeb/src/app/componentes/navs/side-bar/side-bar.component.html
+++ b/proyectoUberWeb/src/app/componentes/navs/side-bar/side-bar.component.html
@@ -1,14 +1,14 @@
 <div class="example-container" [class.example-is-mobile]="mobileQuery.matches" *ngIf="shouldRun">
-  <mat-toolbar color="primary" class="example-toolbar">
+  <mat-toolbar  class="example-toolbar">
     <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
-    <img src="assets\imagenes\uber.png" alt="" width="40px">
-    <h1 class="example-app-name">Proyecto uber</h1>
+    <img src="assets\imagenes\uber.png" alt="" width="55px">
+    <h1 class="example-app-name">Vanes del Valle</h1>
   </mat-toolbar>
 
   <mat-sidenav-container class="example-sidenav-container"
                          [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
     <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
-                 [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
+                 [fixedInViewport]="mobileQuery.matches" fixedTopGap="56" opened>
       <mat-nav-list>
         <a mat-list-item [routerLink]="nav.route" *ngFor="let nav of fillerNav">
           <mat-icon class="icono">{{nav.icon}}</mat-icon>
