--- a/proyectoUberWeb/src/app/componentes/vehiculos/vehiculos/vehiculos.component.html
+++ b/proyectoUberWeb/src/app/componentes/vehiculos/vehiculos/vehiculos.component.html
@@ -12,28 +12,37 @@
   <div class="mat-elevation-z8">
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-    <!-- Position Column -->
+    <!-- Registry Column -->
     <ng-container matColumnDef="placa">
       <th mat-header-cell *matHeaderCellDef> Placa </th>
       <td mat-cell *matCellDef="let element"> {{element.placa}} </td>
     </ng-container>
 
-    <!-- Name Column -->
+    <!-- Marc Column -->
     <ng-container matColumnDef="marca">
       <th mat-header-cell *matHeaderCellDef> Marca </th>
       <td mat-cell *matCellDef="let element"> {{element.marca}} </td>
     </ng-container>
 
-    <!-- Weight Column -->
+    <!-- Capacity Column -->
     <ng-container matColumnDef="capacidad">
       <th mat-header-cell *matHeaderCellDef> Capacidad </th>
       <td mat-cell *matCellDef="let element"> {{element.capacidad}} </td>
     </ng-container>
 
-    <!-- Symbol Column -->
+    <!-- MOdel Column -->
     <ng-container matColumnDef="modelo">
       <th mat-header-cell *matHeaderCellDef> Modelo </th>
       <td mat-cell *matCellDef="let element"> {{element.modelo}} </td>
+    </ng-container>
+    <!-- Actions Column -->
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef> Acciones </th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-icon-button (click)="onEdit(element)"><mat-icon>launch</mat-icon></button>
+        <button mat-icon-button color="warn" (click)="onDelete(element.$key)"><mat-icon>delete_outline</mat-icon></button>
+        </td>
+
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
