--- a/proyectoUberWeb/src/app/componentes/conductores/conductores/conductores.component.html
+++ b/proyectoUberWeb/src/app/componentes/conductores/conductores/conductores.component.html
@@ -19,9 +19,9 @@
     </ng-container>
 
     <!-- Marc Column -->
-    <ng-container matColumnDef="nombre">
+    <ng-container matColumnDef="nombres">
       <th mat-header-cell *matHeaderCellDef> Nombres </th>
-      <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.nombres}} </td>
     </ng-container>
 
     <!-- Capacity Column -->
