--- a/proyectoUberWeb/src/styles.scss
+++ b/proyectoUberWeb/src/styles.scss
@@ -125,7 +125,8 @@ mat-footer-row mat-footer-cell{
   margin: 10px;
     }
     .search-form-field{
-        width: 60%;
+        width: 65%;
+        height: 500px;
         margin-left: 10px;
         padding: 5px 10px;
         background-color: #f5f5f5;
