se implemnta subida de imagen en storage de firebase

--- a/proyectoUberWeb/src/app/componentes/conductores/formularios/frm-editar-conductor/frm-editar-conductor.component.html
+++ b/proyectoUberWeb/src/app/componentes/conductores/formularios/frm-editar-conductor/frm-editar-conductor.component.html
@@ -1,5 +1,17 @@
 <form [formGroup]="FrmEditarConductor" (ngSubmit)="submit(FrmEditarConductor.value)">
-  <mat-grid-list cols="2" rowHeight="300px">
+  <mat-grid-list cols="3" rowHeight="300px">
+    <mat-grid-tile>
+      <mat-card class="post-card">
+        <img matCardImage class="align-center" [src]="DataConductor.foto" />
+        <mat-card-content>
+          <mat-card-title>
+            {{ DataConductor.nombres }} {{ DataConductor.apellidos }}
+          </mat-card-title>
+
+        </mat-card-content>
+      </mat-card>
+    </mat-grid-tile>
+
     <mat-grid-tile>
       <div class="controles-container">
         <mat-form-field>
