--- a/proyectoUberWeb/src/app/componentes/conductores/formularios/frm-guardar-conductor/frm-guardar-conductor.component.html
+++ b/proyectoUberWeb/src/app/componentes/conductores/formularios/frm-guardar-conductor/frm-guardar-conductor.component.html
@@ -57,12 +57,6 @@
         <input formControlName="email" matInput placeholder="Correo Electronico*">
         <mat-error>Correo Electronico es obligatorio</mat-error>
       </mat-form-field>
-      <div class="container-input-file">
-        <label class="custom-file">
-          <input type="file" formControlName="imagenConductor" (change)="handleImage($event)" />
-          <mat-icon>cloud_upload</mat-icon><span>Selecciona imagen</span>
-        </label>
-      </div>
       <mat-form-field>
         <input formControlName="password" matInput placeholder="Contraseña*">
         <mat-error>Identificacion es requerida.</mat-error>
@@ -71,6 +65,13 @@
         <input formControlName="rPassword" matInput placeholder="Repetir Contraseña*">
         <mat-error >Identificacion es requerida.</mat-error>
       </mat-form-field>
+      <div class="container-input-file">
+        <label class="custom-file">
+          <input type="file" formControlName="imagenConductor" (change)="handleImage($event)" />
+         <span>Selecciona imagen</span>
+        </label>
+      </div>
+      <br>
 
       <div class="button-row">
         <button mat-raised-button color="primary" type="submit" [disabled]="false" >Guardar</button>
