--- a/proyectoUberWeb/src/app/componentes/conductores/formularios/frm-guardar-conductor/frm-guardar-conductor.component.scss
+++ b/proyectoUberWeb/src/app/componentes/conductores/formularios/frm-guardar-conductor/frm-guardar-conductor.component.scss
@@ -1,16 +1,16 @@
 .custom-file{
- background-color: #941B80;
-  color: #fff;
+ background-color: #1e2eb9;
+  color: #ffffff;
   cursor: pointer;
-  font-size: 18px;
-  font-weight: bold;
+  font-size: 16px;
   margin: 0 auto 0;
-  min-height: 15px;
+  min-height: 14px;
   overflow: hidden;
-  padding: 10px;
+  padding: 8px;
   position: relative;
   text-align: center;
-  width: 200px;
+  width: 240px;
+  border-radius: 3px;
 }
 
 input[type='file']{
