--- a/proyectoUberWeb/src/app/componentes/pedidos/pedidos/pedidos.component.html
+++ b/proyectoUberWeb/src/app/componentes/pedidos/pedidos/pedidos.component.html
@@ -1,3 +1,65 @@
-<mat-card><h1>Pedidos</h1></mat-card>
-<br>
- <mat-card>Simple card</mat-card>
+<div class="grid-container">
+  <h1 class="mat-h1">Solicitud de Servicio</h1>
+  <div class="example-button-container">
+    <button (click)="abrirModalAgregar()" mat-fab color="warn" aria-label="Example icon button with a home icon">
+      <mat-icon>add</mat-icon>
+    </button>
+  </div>
+  <mat-form-field>
+    <mat-label>Buscar</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Buscar" #input>
+  </mat-form-field>
+  <div class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+    <!-- Registry Column -->
+    <ng-container matColumnDef="nameClient">
+      <th mat-header-cell *matHeaderCellDef> Cliente </th>
+      <td mat-cell *matCellDef="let element"> {{element.nameClient}} </td>
+    </ng-container>
+
+    <!-- Marc Column -->
+    <ng-container matColumnDef="origin">
+      <th mat-header-cell *matHeaderCellDef> Origen </th>
+      <td mat-cell *matCellDef="let element"> {{element.origin |slice:0:38 }} </td>
+    </ng-container>
+
+    <!-- Capacity Column -->
+    <ng-container matColumnDef="destination">
+      <th mat-header-cell *matHeaderCellDef> Destino </th>
+      <td mat-cell *matCellDef="let element"> {{element.destination}} </td>
+    </ng-container>
+
+    <!-- MOdel Column -->
+    <ng-container matColumnDef="km">
+      <th mat-header-cell *matHeaderCellDef> Distancia </th>
+      <td mat-cell *matCellDef="let element"> {{element.km}} </td>
+    </ng-container>
+    <!-- MOdel Column -->
+    <ng-container matColumnDef="nameDriver">
+      <th mat-header-cell *matHeaderCellDef> Conductor </th>
+      <td mat-cell *matCellDef="let element"> {{element.nameDriver}} </td>
+    </ng-container>
+    <!-- Actions Column -->
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef> Acciones </th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-icon-button (click)="onEdit(element)"><mat-icon>launch</mat-icon></button>
+        <button mat-icon-button color="warn" (click)="onDelete(element.$key)"><mat-icon>delete_outline</mat-icon></button>
+        </td>
+
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+    <!-- Row shown when there is no matching data. -->
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" colspan="4">No hay datos que coincidan con el filtro "{{input.value}}"</td>
+    </tr>
+  </table>
+  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+</div>
+
+</div>
+
