--- a/proyectoUberWeb/src/app/componentes/pedidos/pedidos/pedidos.component.html
+++ b/proyectoUberWeb/src/app/componentes/pedidos/pedidos/pedidos.component.html
@@ -38,7 +38,10 @@
     <!-- MOdel Column -->
     <ng-container matColumnDef="nameDriver">
       <th mat-header-cell *matHeaderCellDef> Conductor </th>
-      <td mat-cell *matCellDef="let element"> {{element.nameDriver}} </td>
+      <td mat-cell *matCellDef="let element">
+         <p *ngIf="element.nameDriver!= null" >{{element.nameDriver}}</p>
+         <p *ngIf="element.nameDriver== null" >Sin Asignar</p>
+        </td>
     </ng-container>
     <!-- Actions Column -->
     <ng-container matColumnDef="actions">
@@ -60,6 +63,5 @@
   </table>
   <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
 </div>
-
 </div>
 
